# Ai-Robotics

./: .gitignore  API_DOCS.md  AUTHENTICATION.md  Analyze.md  README.md  package.json  requirements.txt  run_backend.py  run_server.py  simple_server.py  start_server.py  start_server_final.py  test_apis.py
.claude/agents/: assessment-architect.md  chapter-planner.md  content-implementer.md  factual-verifier.md  pedagogical-designer.md  spec-architect.md  super-orchestra.md  validation-auditor.md
.specify/memory/: constitution.md
backend/: .gitignore  Makefile  auth.py  main.py  middleware.py  migrations.py  pyproject.toml  requirements.txt
backend/api/: auth.py  chatbot.py  ingestion.py  personalization.py
backend/config/: __init__.py  database.py  settings.py
backend/data/: database.py  models.py
backend/database/: schema.sql
backend/embeddings/: openai.py
backend/ingestion/: ingestion_pipeline.py
backend/services/: content_service.py  qdrant_service.py  rag_service.py
backend/src_services/: content_service.py  qdrant_client.py
backend/utils/: logger_config.py
backend/vector_db/: qdrant_client.py
history/adr/: 003-physical-ai-course-platform-architecture.md
scripts/: create_tables.py
specs/001-docusaurus-module3/: plan.md  spec.md  tasks.md
specs/001-robotics-course-book/: data-model.md  plan.md  research.md  spec.md
specs/002-physical-ai-course/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-physical-ai-course/: plan.md  research.md  spec.md  tasks.md
src/: config.py  main.py
src/api/: ingestion.py
(+36 files in other folders)
